before platform and plugins added- works on android

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
-    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="phonegap.js"></script>
     <script type="text/javascript" src="scripts/mobileinit.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <!-- Built with love using Web Starter Kit -->
